welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:2: error: ')' expected but '<-' found.
while(i<-10){
       ^Runner:15: error: illegal start of simple expression
	}
        ^