welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var i = 0;
while(i<-10){
	avance(8);
	gauche();
	avance(8);
	gauche();
	avance(8);
	gauche();
	avance(8);
	gauche();
	i = i + &;
}
